<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity"
    android:padding="16dp"
    android:layout_marginTop="30dp"
    android:background="@color/background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon"
        android:padding="2dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        app:shapeAppearanceOverlay="@style/CircularImageViewStyle"
        android:src="@drawable/app_logo_civy"
        android:background="@color/primary"
        android:elevation="15dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/icon"/>

    <Button
        android:id="@+id/btnRegiserEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn"/>

    <View
    android:id="@+id/line"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="1dp"
    android:background="@color/secondary"
    app:layout_constraintTop_toBottomOf="@id/btnRegiserEP"/>

    <TextView
        android:id="@+id/SinginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_signin"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_correo_electronico"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="15dp"
        app:boxStrokeColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SinginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_contrasena"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/secondary"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordLayout"/>

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>